# chessbot

./: README.md  pyproject.toml
scripts/: beam_search.py  chess_training.py  compare.py  data_gen.py  eval_selfplay.py  mcts.py  mcts2.py  pyfastchess_testing.py  qsearch_bootstrap_loop.py  random_forest.py  stockfish_movegen.py  test_model.py  test_mvvlva.py  test_priors.py  tournament.py
src/chessbot/: __init__.py  absearch.py  batched.py  conformer.py  data_gen.py  disservin.py  encoding.py  engine_pool.py  eval_selfplay.py  explore.py  features.py  generate_eval_data.py  h_net.py  looper.py  mcts.py  mcts_utils.py  model.py  psqt.py  review.py  search_utils.py  stockfish.py  transformer.py  utils.py
